less paragraph spacing

--- a/talkingtoothercomputers.ipynb
+++ b/talkingtoothercomputers.ipynb
@@ -70,6 +70,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: get names of helpers at March 23 event, ask for contact info to put at end\n",
+    "    \n",
+    "At least Max, Eric, Ben, John"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -78,8 +87,7 @@
    "source": [
     "Notes\n",
     "---\n",
-    "\n",
-    "ballingt.com/"
+    "ballingt.com/othercomputers"
    ]
   },
   {
@@ -219,8 +227,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
+    "Resource for another time: http://nedbatchelder.com/text/unipain.html\n",
+    "\n",
     "Python 3\n",
     "--------\n",
     "* `b\"asdf\"` is a bytestring\n",
@@ -233,14 +247,43 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "What if we want to represent characters other than ascii? 'åß´ƒ' for example?\n",
+    "\n",
+    "*open side by side python2 python3 prompts*\n",
+    "\n",
+    "Already done in python3, but the ord of 'ƒ' is too big a number! We sent lists of number over sockets. So it's our job to encode this character with the .encode() method.\n",
+    "\n",
+    "Recommend Ned's unicode talk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "By \"bytestring\" I mean a series of numbers between 0 and 255:\n",
-    "    \n",
-    "    #/usr/bin/python2\n",
-    "    >>> ord('a')\n",
-    "    97\n",
-    "    >> "
+    "\n",
+    "~~~\n",
+    "#/usr/bin/python2\n",
+    ">>> ord('a')\n",
+    "97\n",
+    ">>> ord('ƒ')\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<input>\", line 1, in <module>\n",
+    "    ord('ƒ')\n",
+    "TypeError: ord() expected a character, but string of length 2 found\n",
+    ">>> len('ƒ')\n",
+    "2\n",
+    "~~~"
    ]
   },
   {
@@ -255,18 +298,18 @@
     "---\n",
     "* bidirectional\n",
     "* send bytestrings\n",
-    "* single use (one connection per socket)"
+    "* single use (one connection per socket)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Questions?"
+    "Questions? (there should be a lot of these)"
    ]
   },
   {
@@ -304,9 +347,6 @@
     "Exercise: Write a chat client\n",
     "--\n",
     "\n",
-    "Reach goal for more experienced folks: use select on stdin and the socket or threads to block on both, printing incoming messages in real time.\n",
-    "\n",
-    "Useful functions:\n",
     "* socket.socket()\n",
     "* socket.recv()\n",
     "* input() (raw_input() in Python 2)\n",
@@ -351,7 +391,9 @@
     }
    },
    "source": [
-    "Ideas for more advanced versions:\n",
+    "Reach goal for more experienced folks: use select on stdin and the socket or threads to block on both, printing incoming messages in real time.\n",
+    "\n",
+    "other ideas:\n",
     "\n",
     "* two programs: one that listens, one that sends\n",
     "* use threads for concurrency\n",
