--- a/talkingtoothercomputers.ipynb
+++ b/talkingtoothercomputers.ipynb
@@ -65,16 +65,29 @@
    },
    "source": [
     "Helpers\n",
-    "-------\n"
+    "-------\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "TODO: get names of helpers at March 23 event, ask for contact info to put at end\n",
-    "    \n",
-    "At least Max, Eric, Ben, John"
+    "\n",
+    "Introduce everyone: \n",
+    "* Geoffrey\n",
+    "* Eric\n",
+    "* Max\n",
+    "* Ben\n",
+    "* John\n",
+    "* Andrew\n",
+    "* Taymon\n",
+    "* Stephanie\n"
    ]
   },
   {
@@ -140,12 +153,15 @@
     }
    },
    "source": [
-    "What was the internet like in the eighties? Email! BBS\n",
+    "Question for everyone: What was the internet like in the eighties?\n",
     "\n",
-    "* 1973 - users of mainframes can send each other messages\n",
-    "* 1974 - TCP\n",
-    "* 1984 - bbs\n",
-    "* 1988 - irc\n",
+    "* Users of the same mainframe can send each other messages\n",
+    "* BBS\n",
+    "* email\n",
+    "* IRC\n",
+    "\n",
+    "What was the internet like in the nineties?\n",
+    "\n",
     "* 1993 - static html pages\n",
     "* 1995 - server-side scripting\n",
     "* 1997 - cgi\n",
@@ -199,6 +215,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "This is the question we're going to focus on today"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -222,19 +249,17 @@
     }
    },
    "source": [
-    "Note on bytestrings vs strings:"
+    "Suggested resource: http://nedbatchelder.com/text/unipain.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "Resource for another time: http://nedbatchelder.com/text/unipain.html\n",
-    "\n",
     "Python 3\n",
     "--------\n",
     "* `b\"asdf\"` is a bytestring\n",
@@ -242,7 +267,7 @@
     "\n",
     "Python 2\n",
     "--------\n",
-    "`\"asdf\"` is a bytestring already"
+    "* `\"asdf\"` is a bytestring already"
    ]
   },
   {
@@ -270,8 +295,6 @@
     }
    },
    "source": [
-    "By \"bytestring\" I mean a series of numbers between 0 and 255:\n",
-    "\n",
     "~~~\n",
     "#/usr/bin/python2\n",
     ">>> ord('a')\n",
@@ -290,15 +313,41 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "TCP Sockets\n",
-    "---\n",
-    "* bidirectional\n",
-    "* send bytestrings\n",
-    "* single use (one connection per socket)\n"
+    "~~~\n",
+    "#/usr/bin/python3\n",
+    ">>> ord('a')\n",
+    "97\n",
+    ">>> ord('ƒ')\n",
+    "402\n",
+    ">>> len('ƒ')\n",
+    "1\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Unicode strings let us have millions of characters. Bytestrings only have 256 - but that means there's a very nice conversion to number - each character is exactly one byte. So these are good for when you're sending bytes to another person, or saving them to a file. We go between the two by "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](http://eli.thegreenplace.net/images/2012/01/py3_string_bytes.png)"
    ]
   },
   {
@@ -309,7 +358,23 @@
     }
    },
    "source": [
-    "Questions? (there should be a lot of these)"
+    "TCP Sockets\n",
+    "---\n",
+    "\n",
+    "Questions? (there should be a lot)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* bidirectional\n",
+    "* send bytestrings\n",
+    "* single use (one connection per socket)\n"
    ]
   },
   {
@@ -421,9 +486,14 @@
     }
    },
    "source": [
+    "Possible suggestions:\n",
+    "* keep track of names\n",
+    "* send private messages\n",
+    "* allow file transfers\n",
+    "* show if user is typing\n",
+    "* encrypt messages\n",
     "\n",
-    "\n",
-    "TODO add screencasted demo of sending email over a plaintext (too error-prone to use as an exercise, but very cool) and link to a resource on how to do this)"
+    "Hopefully during the tutorial we'll implement usernames. This is what a protocol is!"
    ]
   },
   {
@@ -450,7 +520,18 @@
    "source": [
     "\n",
     "\n",
-    "What's a protcol? A set of rules. We dont' have usernames on the chat. What if we all agreed to do this? Please change your client to write your name, then a colon, then your message."
+    "What's a protcol? A set of rules. We don't have usernames on the chat. What if we all agreed to do this? Please change your client to write your name, then a colon, then your message."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "TODO add screencasted demo of sending email by plaintext (too error-prone for me to do live, but very cool) and link to a resource on how to do this"
    ]
   },
   {
@@ -598,6 +679,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "TODO most useful docs for an http client (the request basically)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -625,30 +717,28 @@
     }
    },
    "source": [
-    "server code\n",
+    "Exercise: let's look at an HTTP request\n",
+    "---\n",
+    "\n",
     "~~~\n",
-    "import select\n",
     "import socket\n",
-    "\n",
-    "server = socket.socket()\n",
-    "#server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
-    "server.bind(('', 1234))\n",
-    "server.listen(5)\n",
-    "\n",
-    "clients = []\n",
-    "\n",
-    "while True:\n",
-    "    ready_to_read, _, _ = select.select(clients + [server], [], [])\n",
-    "    for r in ready_to_read:\n",
-    "        if r is server:\n",
-    "            s, addr = server.accept()\n",
-    "            clients.append(s)\n",
-    "        else:\n",
-    "            msg = r.recv(1000)\n",
-    "            for client in clients:\n",
-    "                if client is not r:\n",
-    "                    client.send(msg)\n",
+    "s = socket.socket()\n",
+    "s.bind(('', 5678))\n",
+    "s.\n",
     "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Question: Could I be hacked?\n",
+    "    \n",
+    "It depends on what you mean by that. Anyone could connect to that socket and you could read the bytes."
    ]
   },
   {
@@ -692,14 +782,65 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "server code being used for our big chat server\n",
+    "~~~\n",
+    "import select\n",
+    "import socket\n",
+    "\n",
+    "server = socket.socket()\n",
+    "#server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
+    "server.bind(('', 1234))\n",
+    "server.listen(5)\n",
+    "\n",
+    "clients = []\n",
+    "\n",
+    "while True:\n",
+    "    ready_to_read, _, _ = select.select(clients + [server], [], [])\n",
+    "    for r in ready_to_read:\n",
+    "        if r is server:\n",
+    "            s, addr = server.accept()\n",
+    "            clients.append(s)\n",
+    "        else:\n",
+    "            msg = r.recv(1000)\n",
+    "            if not msg:\n",
+    "                r.close()\n",
+    "                clients.remove(r)\n",
+    "                continue\n",
+    "            for client in clients:\n",
+    "                if client is not r:\n",
+    "                    client.send(msg)\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
     "Project - make file-serving web server implement http 0.9\n",
-    "---\n",
-    "\n",
-    "https://www.w3.org/Protocols/HTTP/AsImplemented.html"
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Resources:  \n",
+    "* Let's look at a request from our browser\n",
+    "* Let's look at a response from Google\n",
+    "* check Wikipedia: https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "* here's a spec: https://www.w3.org/Protocols/HTTP/AsImplemented.html"
    ]
   },
   {
@@ -712,7 +853,7 @@
    "source": [
     "we’ll step though it’s shortcomings: content type, parsing the rest of the request, caching, etc.\n",
     "\n",
-    "Reach goals for more experienced folks will be to compress the resource. We’ll allow 15 minutes."
+    "Reach goals for more experienced folks will be to compress the resource, respect caching, use 1.0 instead of 0.9, etc."
    ]
   },
   {
@@ -755,6 +896,8 @@
    "source": [
     "This is a tough one, there's a lot of ways to mess up. We should go over the HTTP protocol.\n",
     "\n",
+    "We should talk about the headers.\n",
+    "\n",
     "Go over tools used to test this: show browser request in terminal, and show Google response in terminal."
    ]
   },
@@ -774,29 +917,112 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Web 2.0\n",
+    "===\n",
+    "\n",
+    "Giving people information you don't have\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
-    "\n",
-    "Learning goal: “OMG servers aren’t magic, also practice with Python filesystem APIs”\n",
-    "\n",
-    "Part 3: CGI & WSGI\n",
-    "Giving people information you don't have\n",
-    "\n",
-    "Exercise - modify file server to return the current time\n",
+    "We've seen asking for files, but of course you *could* return anything. My profile page: a page that probably doesn't exist until I ask for it. Generating responses on the fly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Exercise - modify file server not to return a file.\n",
+    "---\n",
+    "Do something dynamic: send back a random number, send back the amount of free disk space on your computer, send back the path they asked for but capitalized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "We’ll encourage people who didn’t get a working version of the previous project to do a git checkout or to copy and paste a gist into a file to start with a working web server. This exercise should take 5 minutes.\n",
-    "Learning goal: “OMG the file path part of a HTTP request is just a suggestion!”\n",
+    "Learning goal: “OMG the file path part of a HTTP request is just a suggestion!”\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Demo - cgi script\n",
+    "===\n",
     "\n",
-    "Exercise - simple cgi script (returns a random file or prints some numbers)\n",
-    "We’ll introduce the basics of the cgi protocol, but dealing with query parameters and post data will be reach goals. We’ll allow 10 minutes so people can be creative - this is an exercise everyone should be able to do since it only requires printing text and optiuonally some HTML.\n",
-    "\n",
-    "Demo - modifying the script (teaching subprocess management is too much of a distraction)\n",
-    "\n",
-    "Lecture - commercial use of the internet backbone permitted in 1995(!), need for more dynamic pages in the late 90s.  cgi scripts, php.  Dot.com boom.  Overview of cgi.\n",
-    "\n",
-    "Lecture - wsgi, fast_cgi, speed, organization, web frameworks\n",
-    "\n",
+    "I'll modify my server to run a script instead!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "`python3 -m http.server --cgi`\n",
+    "---\n",
+    "`python -m CGIHTTPServer`\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "modifying the script (teaching subprocess management is too much of a distraction)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Exercise: How long does it take to start a Python process? CGI untenable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "Exercise - write a web application WSGI function\n",
     "After being presented in lecture with something like https://gist.github.com/thomasballinger/5807241 writing a function that calls a callback in it’s body should be the main tricky bit. Should take 5 minutes.\n",
     "\n",
@@ -805,8 +1031,7 @@
     "\n",
     "\n",
     "\n",
-    "Interlude: Don’t use sockets! <blockquote class=\"twitter-tweet\" data-lang=\"en\"><p lang=\"en\" dir=\"ltr\">Sockets are the assembly language of network programming. There’s usually a much easier library to use.</p>&mdash; Ned Batchelder (@nedbat) <a href=\"https://twitter.com/nedbat/status/710144098028666880\">March 16, 2016</a></blockquote>\n",
-    "<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>\n",
+    "\n",
     "\n",
     "\n",
     "Part 4: JavaScript, the DOM\n",
@@ -820,22 +1045,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/tomb/Dropbox/code/webbeginning\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!pwd"
+    "Interlude: Don’t use sockets! <blockquote class=\"twitter-tweet\" data-lang=\"en\"><p lang=\"en\" dir=\"ltr\">Sockets are the assembly language of network programming. There’s usually a much easier library to use.</p>&mdash; Ned Batchelder (@nedbat) <a href=\"https://twitter.com/nedbat/status/710144098028666880\">March 16, 2016</a></blockquote>\n",
+    "<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Final Notes:\n",
+    "* sockets are understandable\n",
+    "* we didn't talk about how these work\n",
+    "* please don't use these implementations\n",
+    "* try things out in the interactive interpreter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Resources\n",
+    "===\n",
+    "\n",
+    "Books\n",
+    "* http://www.amazon.com/gp/product/1430258543\n",
+    "* http://www.amazon.com/Tangled-Web-Securing-Modern-Applications/dp/1593273886\n",
+    "  \n",
+    "Good resource for same material:\n",
+    "* https://docs.python.org/2/howto/sockets.html"
    ]
   },
   {
