better reach goals for first project

--- a/talkingtoothercomputers.ipynb
+++ b/talkingtoothercomputers.ipynb
@@ -421,6 +421,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "How we'll do projects\n",
+    "---\n",
+    "\n",
+    "You have about 15 minutes. I'll start making progress building my own on the projector in about 5 minutes. If you're stuck in 5 minutes, you can follow along then."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Reach goal for more experienced folks:\n",
+    "\n",
+    "* nicer prompting\n",
+    "* format messages that come in\n",
+    "* write two programs: one that listens, another that receives\n",
+    "* use threads listen for messages and read user input at the same time, printing incoming messages in real time.\n",
+    "* use select on stdin and the socket to do the same thing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -446,25 +477,6 @@
     "            s.send(message_to_send)\n",
     "        print(s.recv(1000))\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Reach goal for more experienced folks: use select on stdin and the socket or threads to block on both, printing incoming messages in real time.\n",
-    "\n",
-    "other ideas:\n",
-    "\n",
-    "* two programs: one that listens, one that sends\n",
-    "* use threads for concurrency\n",
-    "* use select for concurrency\n",
-    "* nicer prompting\n",
-    "* format user input\n"
    ]
   },
   {
@@ -911,6 +923,17 @@
    "source": [
     "15 minute break\n",
     "=="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Addendum: what was wrong with our implementation? (what else is there to the HTTP Spec?) Go over HTTP spec together: error codes, response codes, etc."
    ]
   },
   {
