Ready for first tutorial

--- a/talkingtoothercomputers.ipynb
+++ b/talkingtoothercomputers.ipynb
@@ -539,11 +539,96 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "SMTP\n",
+    "----\n",
+    "\n",
+    "Email works the same way: https://tools.ietf.org/html/rfc821\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](http://ballingt.com/assets/sendemail.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
-    "TODO add screencasted demo of sending email by plaintext (too error-prone for me to do live, but very cool) and link to a resource on how to do this"
+    "~~~\n",
+    "telnet 74.125.22.26 25\n",
+    "HELO thomasballinger.com\n",
+    "MAIL FROM: <me@thomasballinger.com>\n",
+    "RCPT TO:<ballingt@gmail.com>\n",
+    "DATA\n",
+    "From: <thomasballinger@gmail.com>\n",
+    "subject: testing\n",
+    "\n",
+    "hello!\n",
+    ".\n",
+    "QUIT\n",
+    "~~~~\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](http://ballingt.com/assets/receivedemail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "http://blog.annharter.com/2015/07/15/three-dead-protocols.html\n",
+    "\n",
+    "\n",
+    "QOTD: https://tools.ietf.org/html/rfc865\n",
+    "\n",
+    "    nc pchs.co 17\n",
+    "\n",
+    "Daytime Protocol: https://tools.ietf.org/html/rfc867\n",
+    "\n",
+    "    nc pchs.co 13\n",
+    "    \n",
+    "Echo Protocol: https://tools.ietf.org/html/rfc862\n",
+    "    \n",
+    "    nc pchs.co 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Made up protocol:\n",
+    "\n",
+    "    telnet towel.blinkenlights.nl"
    ]
   },
   {
@@ -630,7 +715,8 @@
     }
    },
    "source": [
-    "#from https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "from https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "---\n",
     "~~~\n",
     "    GET /index.html HTTP/1.1\n",
     "    Host: www.example.com\n",
@@ -647,7 +733,8 @@
     }
    },
    "source": [
-    "#from https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "from https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "---\n",
     "~~~\n",
     "HTTP/1.1 200 OK\n",
     "Date: Mon, 23 May 2005 22:38:34 GMT\n",
@@ -679,6 +766,20 @@
     }
    },
    "source": [
+    "What do we know about HTTP?\n",
+    "---\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/List_of_HTTP_status_codes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Project: write an http client\n",
     "------\n",
     "\n",
@@ -691,11 +792,26 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "HTTP Client Resources:\n",
+    "----------------------\n",
+    "* Exampel Session: https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
+    "* Curl: https://en.wikipedia.org/wiki/CURL#Examples_of_cURL_use_from_command_line\n",
+    "* HTTP 0.9 Spec https://www.w3.org/Protocols/HTTP/AsImplemented.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
-    "TODO most useful docs for an http client (the request basically)"
+    "TODO write an implementation people can copy"
    ]
   },
   {
@@ -718,7 +834,9 @@
     }
    },
    "source": [
-    "So sockets are a conversation with the operating system? We can ask it some other things."
+    "So sockets are a conversation with the operating system? We can ask it some other things.\n",
+    "\n",
+    "What's the "
    ]
   },
   {
@@ -736,7 +854,10 @@
     "import socket\n",
     "s = socket.socket()\n",
     "s.bind(('', 5678))\n",
-    "s.\n",
+    "s.listen(5)\n",
+    "stuff = s.accept()\n",
+    "s2 = stuff[0]\n",
+    "print s2.recv(1000)\n",
     "~~~"
    ]
   },
@@ -836,8 +957,43 @@
     }
    },
    "source": [
-    "Project - make file-serving web server implement http 0.9\n",
+    "Project - make (file-serving?) web server implement http 0.9\n",
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "~~~.py\n",
+    "import socket\n",
+    "\n",
+    "listener = socket.socket()\n",
+    "listener.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
+    "listener.bind(('', 8082))\n",
+    "listener.listen(5)\n",
+    "while True:\n",
+    "    s, addr = listener.accept()\n",
+    "    request = s.recv(10000)\n",
+    "    print 'request text:', request\n",
+    "    method, rest = request.split(' ', 1)\n",
+    "    path, rest = rest.split(None, 1)\n",
+    "    print 'method:', method\n",
+    "    print 'path:', path\n",
+    "    s.send('HTTP/1.0 200 OK\\n')\n",
+    "    s.send('Content-Type text/html')\n",
+    "    #s.send('Content-Type: application/octet-stream')\n",
+    "    #s.send('Content-Type: text/plain')\n",
+    "    s.send('\\n\\n')\n",
+    "    s.send('<html><body>')\n",
+    "    s.send('<h1>you asked to '+method+' '+path+'</h1>')\n",
+    "    s.send('</body></html>')\n",
+    "    s.close()\n",
+    "~~~"
    ]
   },
   {
@@ -852,20 +1008,9 @@
     "* Let's look at a request from our browser\n",
     "* Let's look at a response from Google\n",
     "* check Wikipedia: https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Example_session\n",
-    "* here's a spec: https://www.w3.org/Protocols/HTTP/AsImplemented.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "we’ll step though it’s shortcomings: content type, parsing the rest of the request, caching, etc.\n",
-    "\n",
-    "Reach goals for more experienced folks will be to compress the resource, respect caching, use 1.0 instead of 0.9, etc."
+    "* here's a spec: https://www.w3.org/Protocols/HTTP/AsImplemented.html\n",
+    "* https://en.wikipedia.org/wiki/List_of_HTTP_header_fields\n",
+    "* https://developer.mozilla.org/en-US/docs/Web/Security/Securing_your_site/Configuring_server_MIME_types"
    ]
   },
   {
@@ -906,6 +1051,19 @@
     }
    },
    "source": [
+    "we’ll step though it’s shortcomings: content type, parsing the rest of the request, caching, etc.\n",
+    "\n",
+    "Reach goals for more experienced folks will be to compress the resource, respect caching, use 1.0 instead of 0.9, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "This is a tough one, there's a lot of ways to mess up. We should go over the HTTP protocol.\n",
     "\n",
     "We should talk about the headers.\n",
@@ -917,7 +1075,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1024,7 +1182,8 @@
    },
    "source": [
     "modifying the script (teaching subprocess management is too much of a distraction)\n",
-    "\n"
+    "\n",
+    "We're repeating ourselves! Let's abstract thing out!"
    ]
   },
   {
@@ -1069,7 +1228,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Interlude: Don’t use sockets! <blockquote class=\"twitter-tweet\" data-lang=\"en\"><p lang=\"en\" dir=\"ltr\">Sockets are the assembly language of network programming. There’s usually a much easier library to use.</p>&mdash; Ned Batchelder (@nedbat) <a href=\"https://twitter.com/nedbat/status/710144098028666880\">March 16, 2016</a></blockquote>\n",
     "<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
@@ -1110,15 +1273,6 @@
     "Good resource for same material:\n",
     "* https://docs.python.org/2/howto/sockets.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
