string encoding handout

--- a/talkingtoothercomputers.ipynb
+++ b/talkingtoothercomputers.ipynb
@@ -164,15 +164,15 @@
    "source": [
     "# About this workshop\n",
     "\n",
-    "This workshop is designed to be preparation for getting into a good book about network programming,\n",
-    "or helpful background before getting into web programming, or a fun exploration of lower level network programming than most developers get to make use of on a regular basis.\n",
+    "This workshop is about giving you the basic tools of network programming and giving you hooks the hang more detailed knowledge on later. This might be as be good preparation for getting into a good book about network programming, or helpful background before getting into web programming, or a fun exploration of lower level network programming than most developers get to make use of on a regular basis.\n",
     "\n",
-    "PHRASE MORE POSITIVELY - thinkg about things \n",
+    "The network programming most programmers do is several layers above what we'll look at today: for example (from the Brandon Rhodes book) to get the geolocation of an IP address:\n",
     "\n",
-    "* list useful thigns\n",
-    "\"not directly practical\"\n",
+    "* we might pip install a library that has a function called \"get_location()\"\n",
+    "* that library might use the Python library \"requests\" that makes working with http simple\n",
+    "* the requests library might use Python standard library features like `urllib` and ht\n",
     "\n",
-    "This workshop is not very practical, in that most of the code we will be writing is not code you would actually use. These problems have been solved before!\n",
+    "\n",
     "\n",
     "Mention the books here - \n",
     "\n",
@@ -612,6 +612,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "notes"
     }
