--- a/Web Programming from the Beginning.ipynb
+++ b/Web Programming from the Beginning.ipynb
@@ -14,20 +14,20 @@
     "\n",
     "## Networking (Physical layer)\n",
     "[Exercise Guide #2: Simple Server](chatserver.ipynb)\n",
-    "* Problem: How do you get information from one machine to another? Encoding/protocols (abstract)\n",
+    "* Problem: How do I get information from one machine to another? Encoding/protocols (abstract)\n",
     "* Exercise: Talk to neighbour using netcat\n",
     "\n",
     "BREAK\n",
     "\n",
     "## The Internet (TCP/IP)\n",
-    "* Problem: How do you get information from a machine you don’t know? (TCP/IP, DNS)\n",
-    "* Demo: Wireshark on chat server\n",
+    "* Problem: How do I find the machine I want to connect to? (TCP/IP, DNS)\n",
+    "* Demo: Wireshark on chat\n",
     "* Demo: Text-based protocols\n",
     "* Exercises: Chat server\n",
     "\n",
     "## The Web (HTTP/HTML)\n",
     "[Exercise Guide #3: Speaking HTTP](http.ipynb)\n",
-    "* Problem: How do you get information you don’t know you need?\n",
+    "* Problem: How do I get information I don’t know I need?\n",
     "* Exercise: View Source in browser\n",
     "* Exercise: nc as http client/server\n",
     "* Project: Web server\n",
@@ -36,8 +36,7 @@
     "\n",
     "## Web Scripting (Perl/PHP)\n",
     "[Exercise Guide #4: CGI and WSGI](cgiandwsgi.ipynb)\n",
-    "\n",
-    "* Problem: How do you get information that doesn’t yet exist?\n",
+    "* Problem: How do I get information that doesn’t yet exist?\n",
     "* Exercise: CGI script\n",
     "\n",
     "## Conclusion (Frameworks, WSGI, client-side)\n",
