--- a/Web Programming from the Beginning.ipynb
+++ b/Web Programming from the Beginning.ipynb
@@ -12,7 +12,7 @@
     "* Exercise: Connect to chat server with Python\n",
     "* Project: Chat client\n",
     "\n",
-    "## Networking (Physical layer)\n",
+    "## Connecting Computers (Physical layer)\n",
     "[Exercise Guide #2: Simple Server](chatserver.ipynb)\n",
     "* Problem: How do I get information from one machine to another? Encoding/protocols (abstract)\n",
     "* Exercise: Talk to neighbour using netcat\n",
@@ -43,15 +43,6 @@
     "* Problem: So where are we now?\n",
     "* Exercise: WSGI server"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
